--- a/resource/stylesheet.css
+++ b/resource/stylesheet.css
@@ -25,7 +25,7 @@ body {
   background-position: center;
   background-size: cover;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   margin: 0;
   min-height: 100vh;
   position: relative;
@@ -39,6 +39,7 @@ input,
 select,
 option,
 label {
+  font-family: ralewayBold, sans-serif;
   font-size: 1rem;
 }
 
