--- a/resource/stylesheet.css
+++ b/resource/stylesheet.css
@@ -169,6 +169,25 @@ a {
   font-size: 90%;
 }
 
+.entry-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1.25rem 0;
+}
+
+.entry-form > input {
+  border: 1px solid var(--col-grey);
+  font-weight: bold;
+  background-color: var(--col-yellow);
+  color: var(--col-grey);
+  margin: 0 0 0 1rem;
+}
+
+.entry-form > input:active {
+  outline-color: var(--col-grey);
+}
+
 /* Buttons */
 .btn-primary {
   background-color: black;
@@ -197,13 +216,13 @@ a {
 
 .entry-btn {
   background-color: var(--col-yellow);
-  border: 3px solid var(--col-grey);
+  border: 1px solid var(--col-grey);
   color: var(--col-grey);
   padding-left: 10px;
   display: inline-block;
   cursor: pointer;
   font-weight: bold;
-  margin: 0.25rem 0.1rem 1.5rem;
+  margin: 0.25rem 0.1rem;
   padding: 0.25rem 0.25rem;
 }
 
