Adjust stylesheet in accordance with the imobooru commit hash: a581314560b2f9d653b9b41d87c8c61a942d0eb3

--- a/resource/stylesheet.css
+++ b/resource/stylesheet.css
@@ -188,19 +188,38 @@ a {
   outline-color: var(--col-grey);
 }
 
-.image-tags {
+/*
+|| /imobooru/image/:image/
+*/
+
+#image-tags {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+#image-tags img {
+  max-height: 100dvh;
+}
+
+#image-information {
   display: flex;
   flex-direction: column;
 }
 
-.image-information {
+#tag-form form {
+  display: flex;
+}
+
+#tag-form form div {
+  display: flex;
+}
+
+.tag-list {
   display: flex;
   flex-direction: column;
 }
 
-.submit-tags > form {
-  display: flex;
-}
+/**/
 
 /* Buttons */
 .btn-primary {
